[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lark-bots"
version = "0.1.0rc1"
description = "Lark Bot Python SDK"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rocky Haotian Du", email = "rocky_d@yeah.net" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1"]

[dependency-groups]
dev = ["dttb>=0.3.2"]
