[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lark-bots"
version = "0.1.2"
description = "Lark/Feishu Bot Python SDK"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Rocky Haotian Du", email = "rocky_d@yeah.net" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "atask>=0.2.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "dttb>=0.3.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.6",
    "ty>=0.0.22",
]
